Environment Texture Node Properties "reload" and "packing" not working #70454

Closed
opened 2019-10-02 18:14:14 +02:00 by Simeon Conzendorf · 8 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.36

Blender Version
Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-10-01 19:51, hash: 3b23685c7d
Worked: tested 2.8 stable and there it's also not working

Short description of error
In the Environment Texture Node Properties the "reload" and "packing" Buttons don't work, but in the Image Editor the same buttons work as expected.

*Exact steps for others to reproduce the error

  • In the shader editor add an environment node and use the color information on an object.
  • Change something obvious in the texture (hue, etc).
  • Press reload in the shader editor -> toolbar -> item -> properties ----> nothing happens
  • Press reload in the image editor -> toolbar -> image ----> image is reloaded

You can also not pack the image into the blendfile in the shader editor.

You can download my file, unpack the psd, change it and reload. Here's the blend file...
image_reload_bug.blend

And a screenshot which summarize everything:
env_node_reload_bug_marked.jpg

And here a more general thought, which came to my mind:
Why do we still have the environment texture node? What is the advantage? Couldn't it be replaced by an image texture node (because an env texture is also an image) and projection set to spherical ?

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 980/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 431.36 **Blender Version** Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-10-01 19:51, hash: `3b23685c7d` Worked: tested 2.8 stable and there it's also not working **Short description of error** In the Environment Texture Node Properties the "reload" and "packing" Buttons don't work, but in the Image Editor the same buttons work as expected. **Exact steps for others to reproduce the error* - In the shader editor add an environment node and use the color information on an object. - Change something obvious in the texture (hue, etc). - Press reload in the shader editor -> toolbar -> item -> properties ----> nothing happens - Press reload in the image editor -> toolbar -> image ----> image is reloaded You can also not pack the image into the blendfile in the shader editor. You can download my file, unpack the psd, change it and reload. Here's the blend file... [image_reload_bug.blend](https://archive.blender.org/developer/F7785852/image_reload_bug.blend) And a screenshot which summarize everything: ![env_node_reload_bug_marked.jpg](https://archive.blender.org/developer/F7785862/env_node_reload_bug_marked.jpg) And here a more general thought, which came to my mind: **Why do we still have the environment texture node?** What is the advantage? Couldn't it be replaced by an image texture node (because an env texture is also an image) and projection set to spherical ?

Added subscriber: @SimeonConzendorf

Added subscriber: @SimeonConzendorf

Added subscribers: @brecht, @mano-wii

Added subscribers: @brecht, @mano-wii
Brecht Van Lommel was assigned by Germano Cavalcante 2019-10-03 14:35:36 +02:00

I had to use another image since env.psd is not packed in the file.
Even editing the image (with an external editor) reload does not actually reload the image from disk (or does not update OpenGL Buffer).

I don't know if this involves the engine, node editor, Data-Blocks or another area.
@brecht, do you know where to look?

I had to use another image since `env.psd` is not packed in the file. Even editing the image (with an external editor) reload does not actually reload the image from disk (or does not update OpenGL Buffer). I don't know if this involves the engine, node editor, Data-Blocks or another area. @brecht, do you know where to look?

You're right @mano-wii - I checked my own file and the texture is pink. Even if the blendfile is >34 MB and nearly empty. I filled another bugreport - because it wasn't possible to pack any psd, but blender always seem to accept it.

Even, if psd packing is a feature, currently not supported (which like I had to learn in another bugreport) blender should communicate it.

You're right @mano-wii - I checked my own file and the texture is pink. Even if the blendfile is >34 MB and nearly empty. I filled another [bugreport ](https://developer.blender.org/T70495) - because it wasn't possible to pack any psd, but blender always seem to accept it. Even, if psd packing is a feature, currently not supported (which like I had to learn in another bugreport) blender should communicate it.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Brecht Van Lommel was unassigned by Philipp Oeser 2019-10-04 14:04:14 +02:00
Philipp Oeser self-assigned this 2019-10-04 14:04:14 +02:00
Member

Checking differences between node_shader_buts_tex_environment_ex and node_shader_buts_tex_image_ex now, think I can fix...

Checking differences between `node_shader_buts_tex_environment_ex` and `node_shader_buts_tex_image_ex` now, think I can fix...

This issue was referenced by 40492251f2

This issue was referenced by 40492251f2ff7b82468d8b922d95c2af4b98264c
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70454
No description provided.